# docs/swagger.json
@@ -207,7 +207,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.tokenDTO"
+                            "$ref": "#/definitions/handlers.ResponseJSON"
                         }
                     },
                     "400": {
@@ -431,14 +431,6 @@
                     "type": "integer"
                 },
                 "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.tokenDTO": {
-            "type": "object",
-            "properties": {
-                "accessToken": {
                     "type": "string"
                 }
             }
